# baldrick-familiar

./: .gitignore  AGENTS.md  CODE_ANALYSIS.md  DECISIONS.md  MAINTENANCE.md  Makefile  README.md  ask.py  baldrick-broth-model.yaml  baldrick-broth.yaml  create-content.sh  main.py  pyproject.toml
script/: ask.py  copy-mac-cli.py  copy_by_filename.py  help-mac-cli.sh  indexer.py  snapshotter.py
src/baldrick_familiar/: cli.py
